--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,7 @@
 @import "bootstrap";
 
+$lightGray: #999;
+
 /* universal */
 
 html {
@@ -51,7 +53,7 @@ footer {
   margin-top: 45px;
   padding-top: 5px;
   border-top: 1px solid #eaeaea;
-  color: #999;
+  color: $lightGray;
 
   a {
     color: #555;
