--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,7 +12,7 @@
             <%= f.text_field :email %>
 
             <%= f.label :password %>
-            <%= f.password_field :pasword %>
+            <%= f.password_field :password %>
 
             <%= f.label :password_confirmation, "Confirmation" %>
             <%= f.password_field :password_confirmation %>
